--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,4 +32,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/debian-sshd:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/debian-sshd:bullseye
